--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
