--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -42,7 +42,6 @@
 }
 
 .card-footer {
-    display: flex;
     width: 600px;
     height: 149px; 
     background: #FFFFFF;
@@ -94,4 +93,42 @@
     width: 24px;
     padding: 0;
     height: 24px;
+    object-fit: cover;
 }
+
+
+.dropdown {
+    right: 10px;
+    margin-top: 18px;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    top: 10px;
+    right: -50px;
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .delete-button {
+    margin-bottom: 4px;
+    background: #2B3138;
+    border-radius: 20px;
+    width: 116px;
+    height: 26px;
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 13px;
+    color: #F4FAFF;
+  }
