Sent on check to senior and continue work while he checking

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -9,7 +9,7 @@
     gap: 32px;
 }
 
-.instagram_logo {
+.instagram_logo-main {
     margin-bottom: 21px;
     background-size: cover;
     background-repeat: no-repeat;
