--- a/src/styles/PopUp.css
+++ b/src/styles/PopUp.css
@@ -1,4 +1,4 @@
-.button {
+.button-popup {
   font-size: 0em;
   text-decoration: none;
   cursor: pointer;
@@ -54,6 +54,7 @@
 }
 
 .popup {
+  text-align: center;
   position: absolute;
   transition: all 200ms;
   font-size: 30px;
@@ -77,11 +78,6 @@
 .popup .close:hover {
   color: #06d85f;
 }
-/* .popup .content {
-  max-height: 30%;
-  overflow: auto;
-} */
-
 
 .file-input-button {
   padding: 9px 27px;
@@ -120,17 +116,87 @@
   border-radius: 24px;
 }
 
+.description-popup-column {
+  margin-left: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
 .image-description {
   border-radius: 0 0 0 24px;
   width: 599px;
-  height: 604px;
+  height: 605px;
 }
 
 .column-description {
   display: flex;
 }
 
+.data-descpt {
+  display: flex;
+  height: 60px;
+}
+
+.avatar {
+  margin: 14px 0 0 0;
+  width: 32px;
+  height: 32px;
+  border-radius: 15px;
+}
+
+.post-username-description {
+  margin: 20px 10px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
+
 .input_name {
-  width: 355px;
+  border: none;
+  width: 315px;
   height: 250px;
+}
+
+.descpt-ileft {
+  margin-top: 5px;
+  text-align: right;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #999999;
+}
+
+.navbar-popup-description{
+  display: flex;
+  justify-content: space-between;
+}
+
+.move-arrow {
+  width: 36px;
+  margin-top: 30px;
+  margin-left: 24px;
+}
+
+.share {
+  margin-top: 30px;
+  margin-right: 17px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  color: #0095F6;
+}
+
+.description-popup-column-in-update{
+  width: 900px;
+  height: 600px;
+  margin-left: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.input_name-in-update {
+  border: none;
+  width: 900px;
+  height: 400px;
 }
