--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -1,142 +1,214 @@
 .form-posts {
-    margin: auto;
-    align-items: center;
-    width: 1440px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    background: #E5E5E5;
+  margin: auto;
+  position: relative;
+  align-items: center;
+  width: 1440px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  background: #f9f9f9;
 }
 
 .card-inst {
-    margin-right: 350px;
-    margin-top: 25px;
-    width: 600px;
-    height: 910px;
+  border: 1px solid #efefef;
+  margin-right: 350px;
+  margin-top: 25px;
+  width: 600px;
+  height: 910px;
 }
 
 .navbar-post {
-    display: flex;
-    width: 600px;
-    height: 60px;
-    background: #FFFFFF;
-    border-radius: 3px 3px 0px 0px;
-}
-
-.avatar {
-    margin: 14px 0 0 20px;
-    width: 32px;
-    height: 32px;
-    border-radius: 15px; 
+  display: flex;
+  width: 600px;
+  height: 60px;
+  background: #ffffff;
+  border-radius: 3px 3px 0px 0px;
 }
 
 .post-username {
-    margin: 22px 0 0 14px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    color: #262626;
+  margin: 22px 0 0 14px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #262626;
 }
 
 .post-img {
-    width: 600px;
-    height: 600px;
+  width: 600px;
+  height: 600px;
 }
 
 .card-footer {
-    width: 600px;
-    height: 149px; 
-    background: #FFFFFF;
-    border-radius: 0px 0px 3px 3px;
+  width: 600px;
+  height: 249px;
+  background: #ffffff;
+  border-radius: 0px 0px 3px 3px;
 }
 
 .navbar-instagram {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    width: 1440px;
-    height: 60px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 1440px;
+  height: 60px;
 }
 
 .instagram_logo {
-    width: 103px;
-    height: 29px;;
+  width: 103px;
+  height: 29px;
 }
 
 .search {
-    font-size: 16px;
-    line-height: 19px;
-    width: 252px;
-    height: 36px;
-    background: #EFEFEF;
-    border-radius: 8px;
-    border: none;
+  font-size: 16px;
+  line-height: 19px;
+  width: 252px;
+  height: 36px;
+  background: #efefef;
+  border-radius: 8px;
+  border: none;
 }
 
 .left-bar {
-    margin-top: 13px;
-    margin-right: 145px;
-    width: 505px;
-    display: flex;
-    justify-content: space-between;
-
+  margin-top: 13px;
+  margin-right: 145px;
+  width: 505px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .right-bar {
-    margin-top: 19px;
-    width: 270px;
-    display: flex;
-    gap: 27px;
+  margin-top: 19px;
+  width: 270px;
+  display: flex;
+  gap: 27px;
 }
 
 .fonts-img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .fonts-img-button {
-    background: none;
-    border: none;
-    margin: 0;
-    width: 24px;
-    padding: 0;
-    height: 24px;
-    object-fit: cover;
+  background: none;
+  border: none;
+  margin: 0;
+  width: 24px;
+  padding: 0;
+  height: 24px;
+  object-fit: cover;
 }
 
-
 .dropdown {
-    right: 10px;
-    margin-top: 18px;
-    margin-left: auto;
-    width: 24px;
-    height: 24px;
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    top: 10px;
-    right: -50px;
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    padding: 12px 16px;
-    z-index: 1;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  right: 10px;
+  margin-top: 18px;
+  margin-left: auto;
+  width: 24px;
+  height: 24px;
+  position: relative;
+  display: inline-block;
+}
 
-  .delete-button {
-    margin-bottom: 4px;
-    background: #2B3138;
-    border-radius: 20px;
-    width: 116px;
-    height: 26px;
-    font-weight: 700;
-    font-size: 11px;
-    line-height: 13px;
-    color: #F4FAFF;
-  }
+.dropdown-content {
+  top: 10px;
+  right: -50px;
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.delete-button {
+  margin-bottom: 4px;
+  background: #2b3138;
+  border-radius: 20px;
+  width: 116px;
+  height: 26px;
+  font-weight: 700;
+  font-size: 11px;
+  line-height: 13px;
+  color: #f4faff;
+}
+
+.actions-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-img {
+  margin: 11px 12.5px;
+  width: 24px;
+  height: 24px;
+}
+
+.blocks-to-left {
+  margin-left: 20px;
+}
+
+.likes-counts {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.in-blocks {
+  width: 560px;
+  height: 36px;
+  margin-bottom: 9px;
+  display: flex;
+}
+
+.post-username-in-block {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.post-description-in-block {
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.coments-99,
+.hours-9 {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 16px;
+  color: #8e8e8e;
+}
+
+.footer-actions {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-comment {
+  margin-left: 10px;
+  border: none;
+}
+
+.footer-action-left {
+  display: flex;
+}
+
+.footer-action-right {
+  margin-right: 20px;
+}
+
+.post-button {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: rgba(0, 149, 246, 0.25);
+}
+
+.more {
+  color: #8e8e8e;
+}
