--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,41 +1,42 @@
 .form {
-    margin: auto;
-    margin-top: 234px;
-    align-items: center;
-    width: 1440px;
-    height: 1077px;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  margin: auto;
+  margin-top: 234px;
+  align-items: center;
+  width: 1440px;
+  height: 1077px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .instagram_logo-main {
-    margin-bottom: 21px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 435px;
-    height: 124px;
+  margin-bottom: 21px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 435px;
+  height: 124px;
 }
 
-.username, .password{
-    padding: 35px;
-    font-size: 32px;
-    line-height: 38px;
-    width: 645px;
-    height: 62px;
-    background: #F5F5F5;
-    border: 1px solid #6A6A6A;
-    border-radius: 24px;
+.username,
+.password {
+  padding: 35px;
+  font-size: 32px;
+  line-height: 38px;
+  width: 645px;
+  height: 62px;
+  background: #f5f5f5;
+  border: 1px solid #6a6a6a;
+  border-radius: 24px;
 }
 
 .button {
-    color: #FFFFFF;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 49px;
-    width: 720px;
-    height: 100px;
-    background: #79A7FF;
-    border: 1px solid #6A6A6A;
-    border-radius: 24px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 49px;
+  width: 720px;
+  height: 100px;
+  background: #79a7ff;
+  border: 1px solid #6a6a6a;
+  border-radius: 24px;
 }
