--- a/src/styles/PopUp.css
+++ b/src/styles/PopUp.css
@@ -72,7 +72,7 @@
   font-size: 18px;
   line-height: 18px;
   text-decoration: none;
-  color: #0095F6;
+  color: #0095f6;
 }
 
 .popup .close:hover {
@@ -84,9 +84,9 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 21px;
-  color: #FFFFFF;
-  background: #79A7FF;
-  border: 1px solid #6A6A6A;
+  color: #ffffff;
+  background: #79a7ff;
+  border: 1px solid #6a6a6a;
   border-radius: 24px;
 }
 
@@ -111,7 +111,7 @@
 .popup-description {
   width: 956px;
   height: 677px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 24px;
 }
@@ -166,7 +166,7 @@
   color: #999999;
 }
 
-.navbar-popup-description{
+.navbar-popup-description {
   display: flex;
   justify-content: space-between;
 }
@@ -184,10 +184,10 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 18px;
-  color: #0095F6;
+  color: #0095f6;
 }
 
-.description-popup-column-in-update{
+.description-popup-column-in-update {
   width: 900px;
   height: 600px;
   margin-left: 16px;
